--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -6,14 +6,19 @@
   "author": "Trung Tran <trungtran@machinetalk.org>",
   "license": "MIT",
   "scripts": {
-    "dev": "gatsby develop",
+    "dev": "NODE_OPTIONS=\"-r esm\" gatsby develop",
+    "build": "NODE_OPTIONS=\"-r esm\" gatsby build",
+    "serve": "NODE_OPTIONS=\"-r esm\" gatsby serve",
+    "clean": "NODE_OPTIONS=\"-r esm\" gatsby clean",
     "start": "yarn dev",
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "gatsby": "^2.29.3",
     "gatsby-image": "^2.8.0",
     "gatsby-plugin-react-helmet": "^3.7.0",
+    "gatsby-source-sanity": "^6.0.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0"
@@ -28,6 +33,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-react": "^7.22.0",
+    "esm": "^3.2.25",
     "prettier": "^2.2.1",
     "typescript": "^4.1.3"
   }
