--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -14,14 +14,18 @@
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx"
   },
   "dependencies": {
+    "autoprefixer": "^10.1.0",
     "dotenv": "^8.2.0",
     "gatsby": "^2.29.3",
     "gatsby-image": "^2.8.0",
+    "gatsby-plugin-postcss": "^3.4.0",
     "gatsby-plugin-react-helmet": "^3.7.0",
     "gatsby-source-sanity": "^6.0.4",
+    "postcss": "^8.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.11.1",
