--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx"
   },
   "dependencies": {
+    "@reach/router": "^1.3.4",
     "autoprefixer": "^10.1.0",
     "dotenv": "^8.2.0",
     "gatsby": "^2.29.3",
