--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -22,10 +22,10 @@
     "gatsby-plugin-postcss": "^3.4.0",
     "gatsby-plugin-react-helmet": "^3.7.0",
     "gatsby-source-sanity": "^6.0.4",
-    "google-maps-react": "^2.0.6",
     "postcss": "^8.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-google-maps": "^9.4.5",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.1.0",
     "tailwindcss": "^2.0.2"
